--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,11 +7,9 @@
         <div class='o-grid'>
           <div class='o-grid__col o-grid__col--3-4-s'>
             <div class='c-logo u-text-left'>
-              <a class='c-logo__link' href='{{ site.baseurl }}/'>{{ site.title }}+</a>
+              <a class='c-logo__link' href='{{ site.baseurl }}/'>{{ site.title }} | Blog</a>
             </div>
           </div>
-          
-          <h1>yeah</h1>
 
           <div class='o-grid__col o-grid__col--1-4-s'>
             <label class='js-off-canvas-toggle c-off-canvas-toggle' aria-label='Toggle navigation'>
